syntax = "proto3";

package api;

option go_package = "./pkg/pb";

service MoveTechAdminProtoService {
    rpc SaveProduct(SaveProductRequest) returns (SaveProductResponse) {}
    rpc SaveFreebies(SaveFreebiesRequest) returns (SaveFreebiesResponse) {}
    rpc GetAllFreebies (GetAllFreebiesRequest) returns (GetAllFreebiesResponse) {}
    rpc GetAllFreebiesById (GetAllFreebiesRequestById) returns (GetAllFreebiesResponseById) {}
    // rpc GetPDFDataByStatus(GetPDFDataByStatusRequest) returns (GetPDFDataByStatusResponse);
    // rpc UpdateSaveFileByID (UpdateSaveFileByIDRequest) returns (CreatePdfExtractorResponse) {}
    // rpc UpdateSaveFileStatus (UpdateSaveFileStatusRequest) returns (CreatePdfExtractorResponse) {}
    // rpc SaveChangeHistory (ChangeHistoryRequest) returns (ChangeHistoryResponse) {}
    // rpc GetChangeHistory(GetChangeHistoryRequest) returns (GetChangeHistoryResponse);
    // rpc UpdateChangeHistoryByID (UpdateChangeHistoryByIDRequest) returns (ChangeHistoryResponse) {}
}

message ProductData {
    string productId = 1;
    string imgName = 2;
    string img = 3;
    double discount = 4;
    double supplierPrice = 5;
    double originalPrice = 6;
    double discountedPrice = 7;
    string description1 = 8;
    string description2 = 9;
    double originalQuantity = 10;
    double currentQuantity = 11;
    string productStatus = 12;
    double productSold = 13;
    string productFreebies = 14;
    string createdBy = 15;
    int64 createdAt = 16;
    string updatedBy = 17;
    int64 updatedAt = 18;
}

message SaveProductRequest {
    string imgName = 1;
    string img = 2;
    double discount = 3;
    double supplierPrice = 4;
    double originalPrice = 5;
    double discountedPrice = 6;
    string description1 = 7;
    string description2 = 8;
    double originalQuantity = 9;
    double currentQuantity = 10;
    string productStatus = 11;
    double productSold = 12;
    string productFreebies = 13;
}

message SaveProductResponse {
    ProductData productData = 1;
}

message FreebiesData {
    string freebiesId = 1;
    string freebiesName = 2;
    bytes freebiesImg = 3;
    double freebiesStorePrice = 4;
    double freebiesOriginalQuantity = 5;
    double freebiesCurrentQuantity = 6;
    string createdBy = 7;
    int64 createdAt = 8;
    string updatedBy = 9;
    int64 updatedAt = 10;
}

message SaveFreebiesRequest {
    string freebiesName = 1;
    bytes freebiesImg = 2;
    double freebiesStorePrice = 3;
    double freebiesOriginalQuantity = 4;
    double freebiesCurrentQuantity = 5;
}

message SaveFreebiesResponse {
    FreebiesData freebiesData = 1;
}

message GetAllFreebiesRequest {
    string search = 1;
    string sortOption = 2;
}

enum SortOption {
    ATOZ = 0;
    ZTOA = 1;
    PRICE_HIGH_TO_LOW = 2;
    PRICE_LOW_TO_HIGH = 3;
    QUANTITY_HIGH_TO_LOW = 4;
    QUANTITY_LOW_TO_HIGH = 5;
}

message GetAllFreebiesResponse {
    repeated FreebiesData freebiesData = 1;
}

message GetAllFreebiesRequestById {
    string freebiesId = 1;
}

message GetAllFreebiesResponseById {
    repeated FreebiesData freebiesData = 1;
}


// message GetPDFDataByStatusRequest {
//     string csvStatus = 1;
//     bool sort_by_csv_name = 2;
//     bool sort_desc_csv_name = 3;
//     bool sort_by_created_at = 4;
//     bool sort_desc_created_at = 5;
//     string searchQuery = 7;
// }


// message GetPDFDataByStatusResponse {
//     repeated PdfExtractorData pdfDataList = 1;
// }

// message UpdateSaveFileByIDRequest {
//     string csvFilesId = 1;
//     string csvFileJson = 2;
//     string csvName = 3;
// }

// message UpdateSaveFileStatusRequest {
//     string csvFilesId = 1;
//     string csvStatus = 2;
// }

// message ChangeHistoryData {
//     string changeHistoryId = 1;
//     string csvFilesId = 2;
//     string changeHistoryData = 3;
//     string createdBy = 4;
//     int64 createdAt = 5;
//     string updatedBy = 6;
//     int64 updatedAt = 7; 
// }

// message ChangeHistoryRequest {
//     string csvFilesId = 1;
//     string changeHistoryData = 2;
//     string createdBy = 3;
// }

// message ChangeHistoryResponse {
//     ChangeHistoryData changeHistoryData = 1;
// }

// message GetChangeHistoryRequest{
//     string csvFilesId = 1;
//     string searchChangeHistoryQuery = 2;
// }

// message GetChangeHistoryResponse {
//     repeated ChangeHistoryData changeHistoryList = 1;
// }

// message UpdateChangeHistoryByIDRequest {
//     string csvFilesId = 1;
//     string changeHistoryData = 2;
// }